comentario de prueba

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="intro">
             <h1>
                 CENTRO KARIN
+                <!-- prueba -->
             </h1>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit enim exercitationem fuga cum iure 
