--- a/index.html
+++ b/index.html
@@ -1,106 +1,99 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- <link rel="stylesheet" type="text/css" href="/css/normalize.css" media="screen" /> -->
-    <link rel="stylesheet" type="text/css" href="/css/master.css" media="screen" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="remixicons/fonts/remixicon.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Pearl Barber Salon - Bootstrap Template</title>
 </head>
-<body> 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="logo"><img src="imagenes/logo.png" alt=""></div>
-            <a class="navbar-brand" href="index.html">CentroKarin</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Servicios</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
-                </ul>
-            </div>
-        </div>
-      </nav>
-      <main>
-        <div class="intro">
-            <h1>
-                CENTRO KARIN
-                <!-- prueba -->
-            </h1>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit enim exercitationem fuga cum iure 
-                dolore autem natus. 
-            </p>
-        </div>
-        <video src="videos/intro.mp4" muted autoplay loop></video> <!-- atributos para videos de fondo en loop  -->
-        <div class="capa"></div> <!-- capa para ponerla en gris  -->
-      </main>
-      <div class="separadaor"></div>
-      <!-- <div class="presentacion"> -->
-            <!-- <h1 id="nombre">KARINA SAAVEDRA</h1> -->
-            <!-- <button><a href="https://wa.me/56920953779?text=Hola%20quisiera%20reservar%20una%20hora">wsp</a></button> -->
-            <!-- <span>Ka</span>
-            <span>ri</span>
-            <span>na</span>
-            <br>
-            <span>Saa</span>
-            <span>ve</span>
-            <span>dra</span>
-            https://youtube.com/shorts/z0Ti_8ad5Hw?feature=share
-      </div> -->
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="imagenes/slide1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="imagenes/slide2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="imagenes/slide3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+
+<body id= "inicio" data-bs-spy="scroll" data-bs-target=".navbar">
+
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Karin</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#inicio">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#nosotros">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#servicios">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+          </ul>
+          <a href="#" class="btn btn-outline-brand">Book Now</a>
+        </div>
       </div>
-      <div class="separadaor"></div>
+    </nav>
+    <!-- // NAVBAR -->
+
+
+    <!-- HERO -->
+    <section id="hero">
+      <div class="container">
+        <div class="row">
+
+        </div>
+      </div>
+    </section>
+    <!-- // HERO -->
+
+
+    <!-- ABOUT -->
+
+    <!-- // ABOUT -->
+
+
+    <!-- SERVICES -->
+
+    <!-- // SERVICES -->
+
+
+    <!-- FEATURES -->
+
+    <!-- // FEATURES -->
+    
+
+    <!-- TEAM -->
+
+    <!-- // TEAM -->
+
+
+    <!-- TESTIMONIALS -->
+
+    <!-- // TESTIMONIALS -->
+
+
+    <!-- BLOG -->
+
+    <!-- // BLOG -->
+
+
+    <!-- BOOKING -->
+
+    <!-- // BOOKING -->
+
+
+
+    <script src="js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
