--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body id= "inicio" data-bs-spy="scroll" data-bs-target=".navbar">
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Karin</a>
+        <a class="navbar-brand" href="#inicio">Karin Peluquería</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,7 +38,7 @@
               <a class="nav-link" href="#">Pricing</a>
             </li>
           </ul>
-          <a href="#" class="btn btn-outline-brand">Book Now</a>
+          <a href="#" class="btn btn-outline-brand ms-lg-3">Reserva Ahora</a>
         </div>
       </div>
     </nav>
@@ -49,20 +49,70 @@
     <section id="hero">
       <div class="container">
         <div class="row">
-
-        </div>
+          <div class="col-lg-6">
+            <h1>Deja que tu cabello hable</h1>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque volupta, dolor 
+              sit amet consectetur adipisicing elit. Doloremque volupta
+            </p>
+            <a href="" class="btn btn-brand">Ponte en contacto</a>
+          </div>
+        </div
       </div>
     </section>
     <!-- // HERO -->
 
 
     <!-- ABOUT -->
-
+    <section id="about">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-5">
+            <img src="./img/about_img.png" alt="about">
+          </div>
+          <div class="col-lg-4 offset-lg-1">
+            <h6>Sobre Nosotros</h6>
+            <h1>Sobre CentroKarin</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur molestiae eos, fugiat dolore quo dolorum amet, reprehenderit adipisci facere libero nam unde quis provident, ad debitis enim saepe blanditiis laboriosam.
+            </p>
+            <p>
+              Consectetur molestiae eos, fugiat dolore quo dolorum amet, reprehenderit adipisci facere libero nam unde quis provident, ad debitis enim saepe blanditiis laboriosam.
+            </p>
+            <img src="./img/signature.png" alt="signature" class="signature">
+          </div>
+        </div>
+      </div>  
+    </section>
     <!-- // ABOUT -->
 
 
     <!-- SERVICES -->
-
+    <section id="servicios">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 intro">
+            <h6>Qué ofrecemos?</h6>
+            <h1>Nuestros Servicios</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur molestiae eos, fugiat dolore quo dolorum amet, reprehenderit adipisci facere libero nam unde quis provident, ad debitis enim saepe blanditiis laboriosam.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+              <img src="./img/service_1.jpg" alt="servicio1">
+            <div class="servicio">
+              <h3 class="h5">Servicio Titulo</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem ipsa sapiente fuga molestias perferendis suscipit. Nesciunt voluptate ipsa aspernatur sunt 
+              </p>
+              <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>  
+    </section>
     <!-- // SERVICES -->
 
 
