--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <link rel="stylesheet" href="remixicons/fonts/remixicon.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Pearl Barber Salon - Bootstrap Template</title>
+    <title>CentroKarin</title>
 </head>
 
 <body id= "inicio" data-bs-spy="scroll" data-bs-target=".navbar">
-
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container-fluid">
@@ -35,7 +34,7 @@
               <a class="nav-link" href="#servicios">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#caracteristica">caracteristicas</a>
             </li>
           </ul>
           <a href="#" class="btn btn-outline-brand ms-lg-3">Reserva Ahora</a>
@@ -52,10 +51,9 @@
           <div class="col-lg-6">
             <h1>Deja que tu cabello hable</h1>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque volupta, dolor 
-              sit amet consectetur adipisicing elit. Doloremque volupta
+              Itenta probar algo nuevo, la vida es demasiado corta para llevar un cabello aburrido
             </p>
-            <a href="" class="btn btn-brand">Ponte en contacto</a>
+            <a href="https://api.whatsapp.com/send?phone=56987593887&text=Hola%21%20Quisiera%20agendar%20una%20cita" class="btn btn-brand">Ponte en contacto</a>
           </div>
         </div
       </div>
@@ -64,7 +62,7 @@
 
 
     <!-- ABOUT -->
-    <section id="about">
+    <section id="nosotros">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-5">
@@ -89,7 +87,7 @@
 
     <!-- SERVICES -->
     <section id="servicios">
-      <div class="container">
+      <div class="container text-center">
         <div class="row">
           <div class="col-12 intro">
             <h6>Qué ofrecemos?</h6>
@@ -101,23 +99,149 @@
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6">
-              <img src="./img/service_1.jpg" alt="servicio1">
             <div class="servicio">
-              <h3 class="h5">Servicio Titulo</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem ipsa sapiente fuga molestias perferendis suscipit. Nesciunt voluptate ipsa aspernatur sunt 
-              </p>
-              <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+              <img src="./img/service_1.jpg" alt="servicio1">
+              <div class="contenedor">
+                <h3 class="h5">Servicio Titulo</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem ipsa sapiente fuga molestias perferendis suscipit. Nesciunt voluptate ipsa aspernatur sunt 
+                  </p>
+                  <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+              </div>
             </div>
-          </div>
+          </div> 
+          <div class="col-lg-4 col-md-6">
+            <div class="servicio">
+              <img src="./img/service_2.jpg" alt="servicio2">
+              <div class="contenedor">
+                <h3 class="h5">Servicio Titulo</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem ipsa sapiente fuga molestias perferendis suscipit. Nesciunt voluptate ipsa aspernatur sunt 
+                  </p>
+                  <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+              </div>
+            </div>
+          </div> 
+          <div class="col-lg-4 col-md-6">
+            <div class="servicio">
+              <img src="./img/service_3.jpg" alt="servicio3">
+              <div class="contenedor">
+                <h3 class="h5">Servicio Titulo</h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem ipsa sapiente fuga molestias perferendis suscipit. Nesciunt voluptate ipsa aspernatur sunt 
+                  </p>
+                  <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+              </div>
+            </div>
+          </div>                  
         </div>
       </div>  
     </section>
     <!-- // SERVICES -->
 
+    <!-- MILESTONE -->
+    <!-- <section id="milestone">
+      <div class="contenedor">
+        <div class="row">
+          <div class="col-lg-3 col-sm-6 counter">
+            <h1>5468</h1>
+            <p>Customer Service</p>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- // MILESTONES -->
+
+
 
     <!-- FEATURES -->
-
+    <section id="caracteristica">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 intro text-center">
+            <h6>Qué ofrecemos?</h6>
+            <h1>Nuestros Servicios</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur molestiae eos, fugiat dolore quo dolorum amet, reprehenderit adipisci facere libero nam unde quis provident, ad debitis enim saepe blanditiis laboriosam.
+            </p>
+          </div>
+        </div>
+        <div class="row gy-5">
+          <div class="col-lg-4 col-sm-6">
+            <div class="caracteristica">
+              <div class="icon-caracteristica"><i class="ri-pen-nib-fill"></i></div> 
+              <div>
+                <h3 class="h5">Servicio tittle</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae incidunt maxime placeat ducimus assumenda illo  tempora.
+                </p>
+                <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="caracteristica">
+              <div class="icon-caracteristica"><i class="ri-fire-fill"></i></div> 
+              <div>
+                <h3 class="h5">Servicio tittle</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae incidunt maxime placeat ducimus assumenda illo  tempora.
+                </p>
+                <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="caracteristica">
+              <div class="icon-caracteristica"><i class="ri-user-5-fill"></i></div> 
+              <div>
+                <h3 class="h5">Servicio tittle</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae incidunt maxime placeat ducimus assumenda illo  tempora.
+                </p>
+                <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="caracteristica">
+              <div class="icon-caracteristica"><i class="ri-heart-fill"></i></div> 
+              <div>
+                <h3 class="h5">Servicio tittle</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae incidunt maxime placeat ducimus assumenda illo  tempora.
+                </p>
+                <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="caracteristica">
+              <div class="icon-caracteristica"><i class="ri-award-fill"></i></div> 
+              <div>
+                <h3 class="h5">Servicio tittle</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae incidunt maxime placeat ducimus assumenda illo  tempora.
+                </p>
+                <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <div class="caracteristica">
+              <div class="icon-caracteristica"><i class="ri-heart-fill"></i></div> 
+              <div>
+                <h3 class="h5">Servicio tittle</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae incidunt maxime placeat ducimus assumenda illo  tempora.
+                </p>
+                <a href="" class="link-more">Saber más <i class="ri-arrow-right-line icon"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>  
+    </section>
     <!-- // FEATURES -->
     
 
