--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="col-lg-6">
             <h1>Deja que tu cabello hable</h1>
             <p>
-              Itenta probar algo nuevo, la vida es demasiado corta para llevar un cabello aburrido
+              Intenta probar algo nuevo, la vida es demasiado corta para llevar un cabello aburrido
             </p>
             <a href="https://api.whatsapp.com/send?phone=56987593887&text=Hola%21%20Quisiera%20agendar%20una%20cita" class="btn btn-brand">Ponte en contacto</a>
           </div>
