--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#inicio">Karin Peluquería</a>
+        <a class="navbar-brand" href="index.html">Karin Peluquería</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -55,7 +55,7 @@
             </p>
             <a href="https://api.whatsapp.com/send?phone=56987593887&text=Hola%21%20Quisiera%20agendar%20una%20cita" class="btn btn-brand">Ponte en contacto</a>
           </div>
-        </div
+        </div>
       </div>
     </section>
     <!-- // HERO -->
@@ -66,18 +66,18 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-5">
-            <img src="./img/about_img.png" alt="about">
+            <img src="./img/about.jpeg" alt="about">
           </div>
           <div class="col-lg-4 offset-lg-1">
             <h6>Sobre Nosotros</h6>
-            <h1>Sobre CentroKarin</h1>
+            <h1>CentroKarin</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur molestiae eos, fugiat dolore quo dolorum amet, reprehenderit adipisci facere libero nam unde quis provident, ad debitis enim saepe blanditiis laboriosam.
+              Representamos el concepto de innovación y calidad en un sólo lugar, este espacio fue diseñado pensando en que nuestros clientes se sientan a gusto y disfruten de su momento de relajación y belleza al máximo.
             </p>
             <p>
-              Consectetur molestiae eos, fugiat dolore quo dolorum amet, reprehenderit adipisci facere libero nam unde quis provident, ad debitis enim saepe blanditiis laboriosam.
+              Contamos con una gran variedad de servicios y todos van de la mano de profesionales de primera para asesorarte y lograr los resultados que buscas. Nos hemos propuesto ser los mejores para ti ¡Ven a conocernos!
             </p>
-            <img src="./img/signature.png" alt="signature" class="signature">
+            <!-- <img src="./img/signature.png" alt="signature" class="signature"> -->
           </div>
         </div>
       </div>  
@@ -100,9 +100,9 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="servicio">
-              <img src="./img/service_1.jpg" alt="servicio1">
+              <img src="./img/servicio1.jpg" alt="servicio1">
               <div class="contenedor">
-                <h3 class="h5">Servicio Titulo</h3>
+                <h3 class="h5">Cortes</h3>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem ipsa sapiente fuga molestias perferendis suscipit. Nesciunt voluptate ipsa aspernatur sunt 
                   </p>
@@ -112,9 +112,9 @@
           </div> 
           <div class="col-lg-4 col-md-6">
             <div class="servicio">
-              <img src="./img/service_2.jpg" alt="servicio2">
+              <img src="./img/servicio2.jpg" alt="servicio2">
               <div class="contenedor">
-                <h3 class="h5">Servicio Titulo</h3>
+                <h3 class="h5">Alisados</h3>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem ipsa sapiente fuga molestias perferendis suscipit. Nesciunt voluptate ipsa aspernatur sunt 
                   </p>
@@ -124,9 +124,9 @@
           </div> 
           <div class="col-lg-4 col-md-6">
             <div class="servicio">
-              <img src="./img/service_3.jpg" alt="servicio3">
+              <img src="./img/servicio3.jpg" alt="servicio3">
               <div class="contenedor">
-                <h3 class="h5">Servicio Titulo</h3>
+                <h3 class="h5">Coloración</h3>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum quidem ipsa sapiente fuga molestias perferendis suscipit. Nesciunt voluptate ipsa aspernatur sunt 
                   </p>
@@ -263,6 +263,42 @@
     <!-- BOOKING -->
 
     <!-- // BOOKING -->
+
+    <!-- FOOTER -->
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <h3>
+              Lorem IPsum
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+              Rem deserunt fugit ratione nostrum fugiat provident aliquam ullam eius eveniet id, 
+              voluptatibus alias animi, molestias, blanditiis quis asperiores! Sunt, maiores asperiores.
+            </p>
+            <div class="social-link">
+              <a href=""><i class="ri-facebook-fill"></i></a>
+              <a href=""><i class="ri-instagram-fill"></i></a>
+              <a href=""><i class="ri-twitter-fill"></i></a>
+              <a href=""><i class="ri-google-fill"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div>
+              <h4>  
+                Horarios
+              </h4>
+              <h6>
+                Domingo-Viernes
+              </h6>
+              <p>08:00-09:00</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- // FOOTER -->
 
 
 
